[package]
name = "emojicon"
version = "0.3.0"
authors = ["Muhammad Mominul Huque <mominul2082@gmail.com>"]
description = "Find Emoji by using Emoticons and GitHub's, Bengali emoji names."
license = "MIT"
keywords = ["emoji", "emoticon", "unicode", "bengali"]
categories = ["text-processing"]
repository = "https://github.com/mominul/emojicon"
edition = "2018"
exclude = ["/data", "/generate", "/gemoji"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
